# opengil

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODOLIST.md
docs/: capabilities.md  capabilities.zh.md  cli_api.md  development.md  development.zh.md  python_api.md
include/opengil/: attachment_from_decoration_ops.hpp  attachment_ops.hpp  custom_vars_ops.hpp  decoration_ops.hpp  gil.hpp  json.hpp  json_value.hpp  model_ops.hpp  nodegraph_ops.hpp  object_ops.hpp  pixel_decoration_import_ops.hpp  prefab_ops.hpp  projectile_ops.hpp  semantic.hpp  sha256.hpp  ui_generated_ops.hpp  ui_ops.hpp  ui_patch_ops.hpp  ui_pixel_import_ops.hpp  ui_structure_ops.hpp  version.hpp  wire.hpp
include/opengil/cli/: app.hpp
schemas/: gil-known.proto  semantic-paths.json
scripts/: install-skill.ps1
skills/gil-editing/: SKILL.md
skills/gil-editing/agents/: openai.yaml
skills/gil-editing/references/: cli-usage.md  legacy-workflows.md  pitfalls.md  research-workflow.md  semantic-paths.md  verified-operations.md
src/cli/: app.cpp  json_formatters.cpp  json_formatters.hpp  main.cpp
src/core/: gil.cpp  json_value.cpp  sha256.cpp  wire.cpp
src/gui/: i18n.cpp  i18n.hpp  main.cpp
src/ops/: attachment_from_decoration_ops.cpp  attachment_ops.cpp  custom_vars_ops.cpp  decoration_ops.cpp  model_ops.cpp  nodegraph_ops.cpp  object_ops.cpp  pixel_decoration_import_ops.cpp  png_loader.cpp  png_loader.hpp  prefab_ops.cpp  projectile_ops.cpp  ui_generated_ops.cpp  ui_ops.cpp  ui_patch_ops.cpp  ui_pixel_import_ops.cpp  ui_structure_ops.cpp
src/python/: bindings.cpp
src/semantic/: semantic.cpp
tests/diff/: 0empty.gil  0prefab_in_uncategorized_tab.gil  1create_a_tab.gil  1prefab_in_custom_tab.gil  2two_tab.gil  3change_tab.gil
tests/fixtures/: batch-create-objects.json  batch-custom-vars.json  batch-model-rename.json  test1.gil  test2.gil  test3.gil
tests/python/: test_python_bindings.py
tests/unit/: test_attachment_from_decoration_ops.cpp  test_attachment_ops.cpp  test_core.cpp  test_custom_vars_ops.cpp  test_decoration_ops.cpp  test_json_value.cpp  test_model_ops.cpp  test_nodegraph_ops.cpp  test_object_ops.cpp  test_pixel_decoration_import_ops.cpp  test_prefab_ops.cpp  test_projectile_ops.cpp  test_support.hpp  test_ui_generated_ops.cpp  test_ui_ops.cpp  test_ui_patch_ops.cpp  test_ui_pixel_import_ops.cpp  test_ui_structure_ops.cpp
